@@ -3,6 +3,9 @@ cdebconf (0.66) UNRELEASED; urgency=low
   * Joshua Kwan
     - Apply patch from Guillaume Pernot <gpernot@praksys.org> to fix
       a lone semicolon in newt.c that chokes gcc. (Closes: #251973)
+  * Colin Watson
+    - Initialize frontend handle to NULL and check for that on dlclose().
+      This prevents a segfault when DEBIAN_FRONTEND=none.
 
  -- Joshua Kwan <joshk@triplehelix.org>  Tue,  1 Jun 2004 20:52:38 -0700
 
